force-app/main/default/objects/Trip_Day__c/Trip_Day__c.object-meta.xml
<CustomObject>
    <label>Trip Day</label>
    <nameField>
        <label>Trip Day Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>