force-app/main/default/objects/Trip_Day__c/fields/First_Day__c.field-meta.xml
<CustomField>
    <fullName>First_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Day</label>
    <type>Checkbox</type>
</CustomField>