force-app/main/default/objects/Trip_Day__c/fields/Last_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Day</label>
    <type>Checkbox</type>
</CustomField>