force-app/main/default/objects/Trip_Day__c/fields/Trip_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Trip_Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip Accommodation</label>
    <referenceTo>Trip_Accommodation__c</referenceTo>
    <relationshipLabel>Trip Days</relationshipLabel>
    <relationshipName>Trip_Days</relationshipName>
    <type>Lookup</type>
</CustomField>